# quantum_schmuh_display

./: CMakeLists.txt  sdkconfig  sdkconfig.old  sketch.io
components/: lv_conf.h
components/espressif__esp_lcd_touch_gt911/: CMakeLists.txt  README.md  esp_lcd_touch_gt911.c  idf_component.yml
components/espressif__esp_lcd_touch_gt911/include/: esp_lcd_touch_gt911.h
components/lvgl__lvgl/: Kconfig  lv_conf.h
main/: 480_800_16_bmp.c  CMakeLists.txt  Kconfig.projbuild  lvgl_demo_ui.c  quantum_ui.c  quantum_ui.h  quantum_ui_main.c  wifi_connector.c  wifi_connector.h
